--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,23 @@ target
 node_modules
 npm-debug.log
 package-lock.json
+.DS_Store
+/dist
+
+# local env files
+.env.local
+.env.*.local
+
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
