--- a/medicine_fonter/package.json
+++ b/medicine_fonter/package.json
@@ -14,12 +14,15 @@
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
     "core-js": "^2.6.5",
     "crypto-js": "^3.1.9-1",
+    "echarts": "^4.5.0",
     "element-ui": "^2.12.0",
     "js-cookie": "^2.2.1",
     "nprogress": "^0.2.0",
     "path-to-regexp": "^3.1.0",
     "svg-sprite-loader": "^4.1.6",
+    "v-charts": "^1.19.0",
     "vue": "^2.6.10",
+    "vue-count-to": "^1.0.13",
     "vue-router": "^3.0.3",
     "vuex": "^3.0.1"
   },
