--- a/medicine_fonter/package.json
+++ b/medicine_fonter/package.json
@@ -16,6 +16,8 @@
     "crypto-js": "^3.1.9-1",
     "echarts": "^4.5.0",
     "element-ui": "^2.12.0",
+    "html-webpack-plugin": "^3.2.0",
+    "html-webpack-plugin-for-multihtml": "^2.30.2",
     "js-cookie": "^2.2.1",
     "nprogress": "^0.2.0",
     "path-to-regexp": "^3.1.0",
@@ -36,6 +38,7 @@
     "eslint-plugin-vue": "^5.0.0",
     "node-sass": "^4.9.0",
     "sass-loader": "^7.1.0",
+    "script-ext-html-webpack-plugin": "^2.1.4",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
