--- a/medicine_backend/src/main/resources/application.yml
+++ b/medicine_backend/src/main/resources/application.yml
@@ -44,5 +44,8 @@ jwt:
   expiration: 3600000
   auth:
     path: login
+#captcha
+captcha:
+  expiration : 3
 logging:
   config: classpath:logback.xml
